--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     }
 
     header {
-      background: #B22222; /* Retaining your original header color */
+      background: #2A6BBF; /* Retaining your original header color */
       color: white;
       text-align: center;
       padding: 20px;
