--- a/about.html
+++ b/about.html
@@ -273,7 +273,28 @@
 
 <body>
   <header>
-    About Seika Education Consultancy
+    <div class="logo">
+      <img src="Logo-Seika.jpeg" alt="Seika Education Consultancy Logo" srcset="Logo-Seika.jpeg 1x, Logo-Seika-2x.jpeg 2x" />
+    </div>
+
+    <div class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <nav>
+      <ul id="nav-menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Services</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="index.html">Contact</a></li>
+      </ul>
+    </nav>
+
+    <div class="language-switch">
+      <button id="enBtn" class="active">English</button> | <button id="jpBtn">日本語</button>
+    </div>
   </header>
 
   <div class="container">
