--- a/about.html
+++ b/about.html
@@ -518,11 +518,8 @@
       <div class="contact-item">
         <img src="location-icon.png" alt="Location icon" />
         <div class="title">Our location</div>
-        <p>Near Dream International Hotel, Milan Chowk</p>
-        <p>Butwal 32900</p>
-        <div class="map-container">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.4828601614774!2d83.45425627546377!3d27.702930776189913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4m6!3e6!4m3!1s0x3994fb693994e637%3A0x67a9a13b631d87e0!2sSeika%20Education%20Consultancy!3s0x3994fb693994e637%3A0x67a9a13b631d87e0!7i13312!8m2!3d27.702930776189913!4d83.45425627546377!5m2!1m1!1s0x3994fb693994e637%3A0x67a9a13b631d87e0!2m2!1d27.702930776189913!2d83.45425627546377" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <p>Near Dream International Hotel</p>Milan Chowk
+        <p>Butwal-09, Milan Chowk, Rupandehi</p>
       </div>
     </div>
   </div>
