--- a/about.html
+++ b/about.html
@@ -518,11 +518,10 @@
       <div class="contact-item">
         <img src="location-icon.png" alt="Location icon" />
         <div class="title">Our location</div>
-        <p>Near Dream International Hotel</p>Milan Chowk
+        <p>Near Dream International Hotel</p>
         <p>Butwal-09, Milan Chowk, Rupandehi</p>
       </div>
     </div>
-  </div>
 
   <footer>
     <p>© 2025 Seika Education Consultancy. All rights reserved.</p>
