--- a/about.html
+++ b/about.html
@@ -8,28 +8,24 @@
   <meta name="author" content="Seika Education Consultancy" />
   <title>About Seika Education Consultancy</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
   <style>
     html {
-      scroll-behavior: smooth; /* Keep this if you want smooth scrolling on this page */
+      scroll-behavior: smooth;
     }
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background: #fff; /* Changed from #2A6BBF to match your previous about.html background */
-      color: #333; /* Changed from white to match previous about.html text color */
+      background: #fff;
+      color: #333;
     }
 
-    /* ========================================================= */
-    /* START OF COPIED HEADER CSS from index.html */
-    /* ========================================================= */
+    /* Header Styles */
     header {
-      background: #2A6BBF; /* This is the header background from your index.html */
+      background: #2A6BBF;
       color: white;
-      padding: 15px 30px; /* Increased padding for larger elements */
+      padding: 15px 30px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -38,7 +34,7 @@
     }
 
     header .logo img {
-      height: 150px; /* Increased from 120px */
+      height: 150px;
       max-width: 100%;
     }
 
@@ -58,37 +54,35 @@
     }
 
     nav ul li {
-      margin-left: 30px; /* Increased spacing for larger text */
+      margin-left: 30px;
     }
 
     nav ul li a {
       color: white;
       text-decoration: none;
-      font-weight: 700; /* Bolder text */
-      font-size: 20px; /* Increased from ~16px */
+      font-weight: 700;
+      font-size: 20px;
       transition: color 0.2s;
-      white-space: nowrap; /* Keep links from breaking onto new lines */
+      white-space: nowrap;
     }
 
     nav ul li a:hover {
-      color: #e0e0e0; /* Subtle color change on hover */
-      text-decoration: none;
+      color: #e0e0e0;
     }
 
-    .contact-info { /* This class exists in your about.html's main content, but check if any styles here conflict */
+    .header-contact {
       display: flex;
       align-items: center;
       gap: 10px;
       font-size: 0.9rem;
-      /* If this .contact-info is only meant for the footer/main content, it might need to be scoped */
     }
 
-    .contact-info a {
-      color: white; /* This might need adjustment if .contact-info is not in header */
+    .header-contact a {
+      color: white;
       text-decoration: none;
     }
 
-    .contact-info a:hover {
+    .header-contact a:hover {
       text-decoration: underline;
     }
 
@@ -102,7 +96,7 @@
       color: white;
       cursor: pointer;
       font-weight: 600;
-      font-size: 16px; /* Slightly larger for visibility */
+      font-size: 16px;
       margin-left: 5px;
     }
 
@@ -124,25 +118,23 @@
       transition: 0.4s;
     }
 
-    /* ========================================================= */
-    /* START OF COPIED HEADER MEDIA QUERIES from index.html */
-    /* ========================================================= */
+    /* Header Media Queries */
     @media (max-width: 768px) {
       header {
-        flex-direction: row; /* Keep logo and toggle on one row */
+        flex-direction: row;
         justify-content: space-between;
         padding: 10px 20px;
       }
 
       header .logo img {
-        height: 120px; /* Adjusted for mobile */
+        height: 120px;
       }
 
       nav ul {
-        display: none; /* Hidden by default on mobile */
+        display: none;
         flex-direction: column;
         position: absolute;
-        top: 110px; /* Position below the header on mobile */
+        top: 110px;
         left: 0;
         background: #2A6BBF;
         width: 100%;
@@ -153,7 +145,7 @@
       }
 
       nav ul.show {
-        display: flex; /* Show when toggled */
+        display: flex;
         max-height: 300px;
         opacity: 1;
       }
@@ -168,36 +160,29 @@
       }
 
       .menu-toggle {
-        display: flex; /* Show hamburger menu */
+        display: flex;
       }
 
       .language-switch {
-        /* On small screens, position language switch if needed, or put it with menu */
-        position: absolute; /* Example: position it within the expanded menu or separately */
-        top: 20px; /* Adjust as needed */
-        right: 20px; /* Adjust as needed */
-        margin-left: 0; /* Reset margin */
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        margin-left: 0;
       }
     }
-    /* ========================================================= */
-    /* END OF COPIED HEADER MEDIA QUERIES from index.html */
-    /* ========================================================= */
 
-
-    /* ========================================================= */
-    /* START OF EXISTING about.html specific CSS - Check for conflicts! */
-    /* ========================================================= */
+    /* Main Content Styles */
     .container {
       max-width: 1100px;
       margin: 40px auto;
       padding: 0 20px;
-      text-align: center; /* This centers the sections within the container */
+      text-align: center;
     }
 
     .about-section {
       margin-bottom: 40px;
-      background: #fff; /* Ensure it overrides body background if body is blue */
-      color: #333; /* Ensure text is readable */
+      background: #fff;
+      color: #333;
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -206,14 +191,13 @@
     .about-section h1 {
       font-size: 2.5rem;
       margin-bottom: 20px;
-      color: #2A6BBF; /* Example color */
+      color: #2A6BBF;
     }
 
-    /* Styles for the "Message From The MD/CEO" section */
     .owner-message-section {
       margin-bottom: 40px;
       padding: 40px 30px;
-      background: #2A6BBF; /* Blue background for this section */
+      background: #2A6BBF;
       border-radius: 8px;
       color: white;
       display: flex;
@@ -289,14 +273,14 @@
       display: block;
     }
 
-    .contact-info { /* This is the main contact info section for the page */
+    .contact-info {
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
       gap: 20px;
       margin-bottom: 40px;
-      background: #fff; /* Ensure it overrides body background if body is blue */
-      color: #333; /* Ensure text is readable */
+      background: #fff;
+      color: #333;
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -332,20 +316,9 @@
       text-decoration: underline;
     }
 
-    .map-container {
-      margin-top: 20px;
-    }
-
-    .map-container iframe {
-      width: 100%;
-      max-width: 300px;
-      height: 200px;
-      border: 0;
-    }
-
     footer {
-      background: #222; /* Footer background from index.html */
-      color: #ccc; /* Footer text color from index.html */
+      background: #222;
+      color: #ccc;
       padding: 15px 30px;
       text-align: center;
       font-size: 0.9rem;
@@ -361,11 +334,7 @@
       color: white;
     }
 
-    /* ========================================================= */
-    /* END OF EXISTING about.html specific CSS */
-    /* ========================================================= */
-
-    /* Combine relevant media queries - Ensure mobile styling is consistent */
+    /* Media Queries for Responsive Design */
     @media (max-width: 768px) {
       .owner-message-section {
         padding: 30px 15px;
@@ -430,11 +399,6 @@
       .contact-item .title {
         font-size: 1.1rem;
       }
-
-      .map-container iframe {
-        height: 150px;
-        max-width: 100%;
-      }
     }
   </style>
 </head>
@@ -496,7 +460,7 @@
           </p>
         </div>
         <div class="owner-image-column">
-          <img src="srishti.jpg" alt="SRISHTI POUDEL, MD/CEO of Seika Education Consultancy" />
+          <img src="srishti.jpg" alt="Srishti Poudel, MD/CEO of Seika Education Consultancy" />
           <div class="owner-name-below-photo">SRISHTI POUDEL</div>
         </div>
       </div>
@@ -506,14 +470,14 @@
       <div class="contact-item">
         <img src="mail-icon.png" alt="Email icon" />
         <div class="title">Feel free to write to us</div>
-        <a href="mailto:info@seikaeducation.com">info@seikaeducation.com</a>
+        <a href="mailto:info@seikaeducation.com" aria-label="Email Seika Education Consultancy">info@seikaeducation.com</a>
       </div>
       <div class="contact-item">
         <img src="phone-icon.png" alt="Phone icon" />
         <div class="title">Call us</div>
-        <p>01-5918911</p>
-        <p>9851183897</p>
-        <p>9851356890</p>
+        <p><a href="tel:+977015918911" aria-label="Call Seika Education Consultancy at 01-5918911">01-5918911</a></p>
+        <p><a href="tel:+9779851183897" aria-label="Call Seika Education Consultancy at 9851183897">9851183897</a></p>
+        <p><a href="tel:+9779851356890" aria-label="Call Seika Education Consultancy at 9851356890">9851356890</a></p>
       </div>
       <div class="contact-item">
         <img src="location-icon.png" alt="Location icon" />
@@ -522,44 +486,18 @@
         <p>Butwal-09, Milan Chowk, Rupandehi</p>
       </div>
     </div>
+  </div>
 
   <footer>
     <p>© 2025 Seika Education Consultancy. All rights reserved.</p>
     <div class="social-links">
-      <a href="https://www.facebook.com/isanabroad" target="_blank">Facebook</a> |
-      <a href="https://tiktok.com/seikaedu" target="_blank">TikTok</a> |
-      <a href="https://instagram.com/seikaedu" target="_blank">Instagram</a>
+      <a href="https://www.facebook.com/isanabroad" target="_blank" aria-label="Visit Seika Education Consultancy on Facebook">Facebook</a> |
+      <a href="https://tiktok.com/seikaedu" target="_blank" aria-label="Visit Seika Education Consultancy on TikTok">TikTok</a> |
+      <a href="https://instagram.com/seikaedu" target="_blank" aria-label="Visit Seika Education Consultancy on Instagram">Instagram</a>
     </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
   <script>
-    // Swiper Initialization (Remove if not using Swiper on this page)
-    const swiper = new Swiper(".mySwiper", {
-      loop: true,
-      autoplay: {
-        delay: 4000,
-        disableOnInteraction: false,
-      },
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-      on: {
-        init: function () {
-          this.update();
-        },
-        resize: function () {
-          this.update();
-        },
-      },
-    });
-
     // Hamburger Menu Toggle
     const menuToggle = document.querySelector(".menu-toggle");
     const navMenu = document.getElementById("nav-menu");
@@ -571,11 +509,9 @@
 
     menuToggle.addEventListener("click", toggleMenu);
 
-    // Language Switcher - ONLY include if you want language switching on this page
+    // Language Switcher
     const translations = {
       en: {
-        // ... (add all content specific to this about.html page for English)
-        // Example:
         aboutUsTitle: "About Us",
         aboutUsPara1: "Seika Education Consultancy is dedicated to helping students achieve their dreams of studying in Japan.",
         aboutUsPara2: "Founded with a passion for education, we provide expert guidance on university applications, visa processes, and language training.",
@@ -585,18 +521,14 @@
         mdCeoPara3: "With a team of enthusiastic staff and professional instructors, we offer a vibrant atmosphere and a wide range of specialized, goal-oriented Japanese language and cultural programs. We encourage students to embrace new challenges and pursue their dreams. If you aspire to study abroad in Japan, we are dedicated to providing our utmost support to help you achieve your goals.",
         mdCeoPara4: "We warmly welcome you to join us, and we look forward to supporting you on your educational journey.",
         ownerName: "SRISHTI POUDEL",
-        contactTitle: "Our location", // For the contact item itself
         mailTitle: "Feel free to write to us",
         callTitle: "Call us",
         locationTitle: "Our location",
-        locationAddress1: "Near Dream International Hotel, Milan Chowk",
-        locationAddress2: "Butwal 32900",
+        locationAddress1: "Near Dream International Hotel",
+        locationAddress2: "Butwal-09, Milan Chowk, Rupandehi",
         footerText: "© 2025 Seika Education Consultancy. All rights reserved."
-
       },
       jp: {
-        // ... (add all content specific to this about.html page for Japanese)
-        // Example:
         aboutUsTitle: "私たちについて",
         aboutUsPara1: "清華教育コンサルタンシーは、学生が日本留学の夢を実現できるよう支援することに専念しています。",
         aboutUsPara2: "教育への情熱をもって設立され、私たちは大学出願、ビザ手続き、語学研修に関する専門的な指導を提供しています。",
@@ -606,40 +538,37 @@
         mdCeoPara3: "熱心なスタッフとプロの講師陣とともに、活気ある雰囲気と幅広い専門的で目標指向の日本語および文化プログラムを提供しています。私たちは学生が新たな挑戦を受け入れ、夢を追求することを奨励します。日本への留学を希望するなら、あなたの目標達成を最大限にサポートすることに専念しています。",
         mdCeoPara4: "皆様のご参加を心よりお待ちしております。",
         ownerName: "スリシュティ・ポウデル",
-        contactTitle: "所在地",
         mailTitle: "お気軽にお問い合わせください",
         callTitle: "お電話ください",
         locationTitle: "私たちの所在地",
-        locationAddress1: "ドリームインターナショナルホテル近く、ミランチョーク",
-        locationAddress2: "ブトワル 32900",
+        locationAddress1: "ドリームインターナショナルホテル近く",
+        locationAddress2: "ブトワル-09、ミランチョーク、ルパンデヒ",
         footerText: "© 2025 清華教育コンサルタンシー. 無断転載を禁じます。"
-      },
+      }
     };
 
     function updatePageContent(lang) {
-        document.querySelector(".about-section h1").textContent = translations[lang].aboutUsTitle;
-        document.querySelector(".about-section p:nth-of-type(1)").textContent = translations[lang].aboutUsPara1;
-        document.querySelector(".about-section p:nth-of-type(2)").textContent = translations[lang].aboutUsPara2;
-
-        document.querySelector(".owner-message-section .main-title").innerHTML = translations[lang].mdCeoMessageTitle;
-        document.querySelector(".owner-message-section p:nth-of-type(1)").textContent = translations[lang].mdCeoPara1;
-        document.querySelector(".owner-message-section p:nth-of-type(2)").textContent = translations[lang].mdCeoPara2;
-        document.querySelector(".owner-message-section p:nth-of-type(3)").textContent = translations[lang].mdCeoPara3;
-        document.querySelector(".owner-message-section p:nth-of-type(4)").textContent = translations[lang].mdCeoPara4;
-        document.querySelector(".owner-name-below-photo").textContent = translations[lang].ownerName;
-
-        document.querySelector(".contact-item:nth-of-type(1) .title").textContent = translations[lang].mailTitle;
-        document.querySelector(".contact-item:nth-of-type(2) .title").textContent = translations[lang].callTitle;
-        document.querySelector(".contact-item:nth-of-type(3) .title").textContent = translations[lang].locationTitle;
-        document.querySelector(".contact-item:nth-of-type(3) p:nth-of-type(1)").textContent = translations[lang].locationAddress1;
-        document.querySelector(".contact-item:nth-of-type(3) p:nth-of-type(2)").textContent = translations[lang].locationAddress2;
-        document.querySelector("footer p").textContent = translations[lang].footerText;
+      document.querySelector(".about-section h1").textContent = translations[lang].aboutUsTitle;
+      document.querySelector(".about-section p:nth-of-type(1)").textContent = translations[lang].aboutUsPara1;
+      document.querySelector(".about-section p:nth-of-type(2)").textContent = translations[lang].aboutUsPara2;
+      document.querySelector(".owner-message-section .main-title").innerHTML = translations[lang].mdCeoMessageTitle;
+      document.querySelector(".owner-message-section p:nth-of-type(1)").textContent = translations[lang].mdCeoPara1;
+      document.querySelector(".owner-message-section p:nth-of-type(2)").textContent = translations[lang].mdCeoPara2;
+      document.querySelector(".owner-message-section p:nth-of-type(3)").textContent = translations[lang].mdCeoPara3;
+      document.querySelector(".owner-message-section p:nth-of-type(4)").textContent = translations[lang].mdCeoPara4;
+      document.querySelector(".owner-name-below-photo").textContent = translations[lang].ownerName;
+      document.querySelector(".contact-item:nth-of-type(1) .title").textContent = translations[lang].mailTitle;
+      document.querySelector(".contact-item:nth-of-type(2) .title").textContent = translations[lang].callTitle;
+      document.querySelector(".contact-item:nth-of-type(3) .title").textContent = translations[lang].locationTitle;
+      document.querySelector(".contact-item:nth-of-type(3) p:nth-of-type(1)").textContent = translations[lang].locationAddress1;
+      document.querySelector(".contact-item:nth-of-type(3) p:nth-of-type(2)").textContent = translations[lang].locationAddress2;
+      document.querySelector("footer p").textContent = translations[lang].footerText;
     }
 
     function switchLanguage(lang) {
       document.getElementById("enBtn").classList.toggle("active", lang === "en");
       document.getElementById("jpBtn").classList.toggle("active", lang === "jp");
-      updatePageContent(lang); // Update page content based on language
+      updatePageContent(lang);
     }
 
     document.getElementById("enBtn").addEventListener("click", () => switchLanguage("en"));
