--- a/about.html
+++ b/about.html
@@ -488,10 +488,10 @@
     <section class="about-section">
       <h1>About Us</h1>
       <p>
-        Seika Education Consultancy is dedicated to helping students achieve their dreams of studying in Japan.
+        Since 2018, Seika Education Consultancy has been offering professional support for students pursuing education abroad.
       </p>
       <p>
-        Founded with a passion for education, we provide expert guidance on applications, visa processes, and language training.
+        In addition to our experience assisting with studies in countries like Australia,we are actively providing expert services for students aiming to study & work in Japan.
       </p>
     </section>
 
