--- a/about.html
+++ b/about.html
@@ -488,10 +488,8 @@
     <section class="about-section">
       <h1>About Us</h1>
       <p>
-        Since 2018, Seika Education Consultancy has been offering professional support for students pursuing education abroad.
-      </p>
-      <p>
-        In addition to our experience assisting with studies in countries like Australia,we are actively providing expert services for students aiming to study & work in Japan.
+        Since 2018, Seika Education Consultancy has been offering professional support for students pursuing education abroad.<br>
+        In addition to our experience assisting with studies in countries like Australia,we are actively providing expert services<br> for students aiming to study & work in Japan.
       </p>
     </section>
 
