--- a/about.html
+++ b/about.html
@@ -180,6 +180,7 @@
     }
 
     .about-section {
+      style= "margin: 0;"
       margin-bottom: 40px;
       background: #fff;
       color: #333;
@@ -195,6 +196,7 @@
     }
 
     .basic-info-section {
+      style= "margin: 0;"
       margin-bottom: 40px;
       background: #fff;
       color: #333;
