--- a/about.html
+++ b/about.html
@@ -237,6 +237,57 @@
     .basic-info-section tr:hover {
       background-color: #f1f1f1;
     }
+     
+    .workforce-section {
+      margin-bottom: 40px;
+      background: #fff;
+      color: #333;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .workforce-section h2 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+      color: #2A6BBF;
+    }
+
+    .workforce-section h3 {
+      font-size: 1.5rem;
+      color: #d81b60;
+      margin-bottom: 10px;
+    }
+
+    .team-members {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .team-member {
+      text-align: center;
+    }
+
+    .team-member img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .team-member .name {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .team-member .role {
+      font-size: 1rem;
+      color: #666;
+    }
+
 
     .owner-message-section {
       margin-bottom: 40px;
@@ -524,7 +575,39 @@
         </tr>
       </table>
     </section>
-
+    
+   <section class="workforce-section">
+      <h2>Our Team</h2>
+      <div class="team-members">
+        <div class="team-member">
+          <img src="srishti.jpg" alt="POUDEL SRISHTI, CEO" />
+          <div class="name">Poudel Srishti</div>
+          <div class="role">CEO/MD</div>
+        </div>
+        <div class="team-member">
+          <img src="srishti.jpg" alt="Chaulagain Sanjeeb, Co-CHAIRMAN" />
+          <div class="name">Chaulagain Sanjeeb</div>
+          <div class="role">Co-CHAIRMAN/Japan Representative</div>
+        </div>
+        <div class="team-member">
+          <img src="srishti.jpg" alt="Poudel Subhas,Co-CHAIRMAN " />
+          <div class="name">Poudel Subhas</div>
+          <div class="role">Co-CHAIRMAN/Japan Representative</div>
+        </div>
+         <div class="team-member">
+          <img src="srishti.jpg" alt="Paudel Suman, Manager" />
+          <div class="name">Paudel Suman</div>
+          <div class="role">Manager/Japan Representative/Language Teacher</div>
+        </div>
+      </div>
+           <div class="team-member">
+          <img src="srishti.jpg" alt="Ghimire YubRaj, Teacher" />
+          <div class="name">Ghimire YubRaj</div>
+          <div class="role">Language Teacher</div>
+        </div>
+      </div>
+    </section>
+  
     <section class="owner-message-section">
       <div class="main-title">
         Message From The MD/CEO Of<br><span class="underline">Seika Education Consultancy</span>
